Bug 1400219 - Align permission status menulists in the permission dialog with the header and adjust the menulist margin. r=johannh
MozReview-Commit-ID: LaY1YaNZydg

UltraBlame original commit: e5c4c1634e3af703e873dbbb1559d9d9ddb4faaa

--- a/browser/components/preferences/sitePermissions.css
+++ b/browser/components/preferences/sitePermissions.css
@@ -47,3 +47,21 @@ height
 35px
 ;
 }
+.
+website
+-
+status
+{
+margin
+:
+1px
+;
+margin
+-
+inline
+-
+end
+:
+5px
+;
+}
